--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,9 @@ before_test:
 - echo ^#define %MODE% >> src/include/EA31337/ea-mode.mqh
 test_script:
 - ps: shellcheck scripts/*.sh
-- metaeditor /mql4 /s /compile:%EAFILE% /log:mql4.log || exit /b 0
-- metaeditor /mql5 /s /compile:%EAFILE% /log:mql5.log || exit /b 0
+- ps: Copy-Item "$env:EAFILE" -Destination "$env:EAFILE.mq5"
+- metaeditor /s /compile:%EAFILE% /log:mql4.log || exit /b 0
+- metaeditor /s /compile:%EAFILE%.mq5 /log:mql5.log || exit /b 0
 - type mql4.log mql5.log
 - ruby -e "if File.open('mql4.log', mode:'rb:BOM|UTF-16LE').readlines.grep(Regexp.new '[1-9] error'.encode(Encoding::UTF_16LE)) {exit 1}; end"
 - ruby -e "if File.open('mql4.log', mode:'rb:BOM|UTF-16LE').readlines.grep(Regexp.new '[1-9] warning'.encode(Encoding::UTF_16LE)) {exit 1}; end"
